Стилек и чек-листы

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}Главная - SEO Agency{% endblock %}
+{% block title %}Главная - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-12">
-        <h1 class="mb-4">
-            <i class="bi bi-speedometer2"></i> Дашборд
-            <small class="text-muted">{{ today|date:"d.m.Y" }}</small>
-        </h1>
+        <div class="text-center mb-4">
+            <div class="speech-bubble mb-3">
+                <p class="mb-0">Путь воина начинается здесь</p>
+            </div>
+            <img src="https://media1.tenor.com/m/lujLIohloN8AAAAC/toshiro-mifune.gif" 
+                 alt="Toshiro Mifune" 
+                 style="max-width: 200px; height: auto;">
+        </div>
     </div>
 </div>
 
