--- a/templates/notes/checklist_detail.html
+++ b/templates/notes/checklist_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{{ checklist.title }} - Чек-лист{% endblock %}
+{% block title %}{{ checklist.title }} - Чек-лист - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
