--- a/templates/notes/project_note_list.html
+++ b/templates/notes/project_note_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Заметки к проектам - SEO Agency{% endblock %}
+{% block title %}Заметки к проектам - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
