--- a/templates/projects/multiple_file_upload.html
+++ b/templates/projects/multiple_file_upload.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Массовая загрузка файлов - SEO Agency{% endblock %}
+{% block title %}Массовая загрузка файлов - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
