--- a/templates/projects/project_detail_enhanced.html
+++ b/templates/projects/project_detail_enhanced.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ project.name }} - Детали проекта{% endblock %}
+{% block title %}{{ project.name }} - Детали проекта - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
