--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Проекты - SEO Agency{% endblock %}
+{% block title %}Проекты - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
