--- a/templates/reports/report_list.html
+++ b/templates/reports/report_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Отчеты - SEO Agency{% endblock %}
+{% block title %}Отчеты - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
