--- a/templates/notes/note_list.html
+++ b/templates/notes/note_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Заметки - SEO Agency{% endblock %}
+{% block title %}Заметки - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
