--- a/templates/projects/content_text.html
+++ b/templates/projects/content_text.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ content.title }} - {{ project.name }}{% endblock %}
+{% block title %}{{ content.title }} - {{ project.name }} - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
