--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ project.name }} - SEO Agency{% endblock %}
+{% block title %}{{ project.name }} - Внутренний девелопмент{% endblock %}
 
 {% block content %}
 <div class="row">
