--- a/templates/base.html
+++ b/templates/base.html
@@ -385,6 +385,11 @@
                             <i class="bi bi-sticky"></i> Заметки
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'resources:resource_list' %}">
+                            <i class="bi bi-collection"></i> Ресурсы
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
