--- a/templates/base.html
+++ b/templates/base.html
@@ -390,6 +390,11 @@
                             <i class="bi bi-collection"></i> Ресурсы
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'news:news_list' %}">
+                            <i class="bi bi-newspaper"></i> Новости
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
