--- a/templates/base.html
+++ b/templates/base.html
@@ -395,6 +395,11 @@
                             <i class="bi bi-newspaper"></i> Новости
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tools:website_list' %}">
+                            <i class="bi bi-tools"></i> Инструменты
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
