--- a/templates/base.html
+++ b/templates/base.html
@@ -396,7 +396,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tools:website_list' %}">
+                        <a class="nav-link" href="{% url 'tools:analysis_list' %}">
                             <i class="bi bi-tools"></i> Инструменты
                         </a>
                     </li>
